feat: update docs config